fix: Only remove horizontal padding from td element, preserve vertical spacing

--- a/common/common.scss
+++ b/common/common.scss
@@ -896,7 +896,8 @@
     > td:first-child {
       display: block !important;
       width: 100%;
-      padding: 0 !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
 
       .pull-left {
         display: block !important;
